# elastic_rods

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
cmake/: FindASSIMP.cmake  FindGLAD.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindTinyOBJ.cmake  executable.cmake
projects/: CMakeLists.txt
projects/elastic_rod/: main.cpp
resources/: CMakeLists.txt
shaders/elastic_rods/: edgesShader.vert  edgesShader_VERT_old.txt  rigidBody.frag  rodEdges.frag  rodEdges.geom  rodEdges.vert  rodVertices.frag  rodVertices.vert  sceneCube.vert  scenePlane.frag
shaders/general/: lineShader.frag  points.frag  points.vert
src/: CMakeLists.txt  ElasticRods.cpp  ElasticRods.h  HairGenerator.cpp  HairGenerator.h  RigidBody.cpp  RigidBody.h  RodRenderer.cpp  RodRenderer.h
src/imGUI/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_glfw.cpp  imgui_glfw.h  imgui_internal.h
src/libraries/Geometry/: RenderCone.cpp  RenderCone.h  RenderCube.cpp  RenderCube.h  RenderPlane.cpp  RenderPlane.h  RenderSphere.cpp  RenderSphere.h  fileLoader.cpp  fileLoader.h  object.cpp  object.h  renderer.cpp  renderer.h
src/libraries/Math/: Distancefield.cpp  Distancefield.h  MathFunctions.cpp  MathFunctions.h
src/libraries/Rendering/: Camera.cpp  Camera.h  trackballCamera.cpp  trackballCamera.h
src/libraries/Shader/: shaderProgram.cpp  shaderProgram.h
src/libraries/Utility/: GenerateCurve.cpp  GenerateCurve.h  GenerateHelix.cpp  GenerateHelix.h  GenerateLinear.cpp  GenerateLinear.h  RenderBishopFrames.cpp  RenderBishopFrames.h  RenderLine.cpp  RenderLine.h  definitions.h  fileReader.cpp  fileReader.h
